# iFollow-Robotics-Challenge_2020

./: README.md
Stage_1/Q.1_Answer/: Question_1.py  README.md
Stage_1/Q.3_Answer/demo/: CMakeLists.txt  README.md  package.xml
Stage_1/Q.3_Answer/demo/cfg/: demo_cfg.cfg
Stage_1/Q.3_Answer/demo/launch/: demo.launch
Stage_1/Q.3_Answer/demo/src/: listener.cpp  listener.py  talker.cpp  talker.py
Stage_1/Q.4_Answer/: README.md
Stage_1/Q.4_Answer/canny_edge_ros_opencv/: CMakeLists.txt  package.xml
Stage_1/Q.5_Answer/joystick_teleop_mobile_robot/: CMakeLists.txt  README.md  package.xml
Stage_1/Q.5_Answer/joystick_teleop_mobile_robot/config/: minimal_mobile_robot_control.yaml
Stage_1/Q.5_Answer/joystick_teleop_mobile_robot/src/: Joyteleop_turtlebot3_m1.py  joystick_turtlebot3_m3.py  joyteleop_turtlebot3_m2.py
